--- a/.github/workflows/test-github-action.yml
+++ b/.github/workflows/test-github-action.yml
@@ -5,10 +5,7 @@ name: CI
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: '59 10 * * 1-5'
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    - cron: '* 11 * * 1-5'
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
